Добавил centrifugo в качетсве канала для общения клиента и сервера

--- a/chat_project/templates/index.html
+++ b/chat_project/templates/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <script src="https://unpkg.com/centrifuge@3.0.1/dist/centrifuge.js"></script>
+    <script src="https://unpkg.com/" https:
+    //unpkg.com/centrifuge@3.0.1/dist/centrifuge.js"centrifuge@3.0.1/dist/centrifuge.js"></script>
 </head>
 <body>
 <div>New messages:</div>
